Finalized About Me

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>About Me</title>
   </head>
   <body>
+    <h1>Welcome</h1>
+      <h2>My Name is Gavin</h2>
+      <h3>I'm glad you got to know a little more about me.</h3>
+        <p>My full name is Gavin Eugene Thomas. I would like to think, a full grown man but sometimes I doubt my maturity. I am 24 years old and have one amazing young boy named Alaric Eugene Thomas. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the country. </p>
+        <img src="headshot.jpg" alt="Me">
+
+
+  <footer>
+    <ul>
+      <li><a href="www.google.com">Contact me</a></li>
+      <li><a href="www.google.com">View my work</a></li>
+      <li><a href="www.google.com">Request a Job</a></li>
+    </ul>
+  </footer>
   <script src="app.js"></script>
   </body>
 </html>
