--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="utf-8">
-    <title>About Me</title>
-  </head>
-  <body>
-    <h1>Welcome</h1>
-      <h2>My Name is Gavin</h2>
-      <h3>I'm glad you got to know a little more about me.</h3>
-        <p>My full name is Gavin Eugene Thomas. I would like to think, a full grown man but sometimes I doubt my maturity. I am 24 years old and have one amazing young boy named Alaric Eugene Thomas. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the country. </p>
-        <img src="headshot.jpg" alt="Me">
 
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>About Me</title>
+</head>
+
+<body>
+  <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
+  <h1>The man behind the curtain</h1>
+  <h2>Hello, I'm glad you got to know a little more about me.</h2>
+  <p>My name is Gavin Eugene Thomas. I am in fact a male and 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the
+    country. </p>
+  <img src="headshot.jpg" alt="Me">
+  <p>Accomplishments to date.</p>
+  <ul>
+    <li>Graduated high school with an Associates of the Arts from Pierce College.</li>
+    <li>Graduated from University of Washington with a Bachelor in Psychology at age 20.</li>
+    <li>Graduated from Washingtons Law Enforcement Police Academy at age 21.</li>
+  </ul>
+  <p>This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
 
   <footer>
     <ul>
@@ -21,5 +30,6 @@
     </ul>
   </footer>
   <script src="app.js"></script>
-  </body>
+</body>
+
 </html>
