Added underline to important topics

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <img src="headshot.jpg" alt="Me">
   <p id="accomplsh">Accomplishments to date.</p>
   <ul class="accomplish">
-    <li class="accomplish">Graduated high school with an Associates of the Arts from Pierce College.</li>
-    <li class="accomplish">Graduated from University of Washington with a Bachelor in Psychology at age 20.</li>
-    <li class="accomplish">Graduated from Washingtons Law Enforcement Police Academy at age 21.</li>
+    <li class="accomplish">Graduated high school with an <u>Associates of the Arts</u> from Pierce College.</li>
+    <li class="accomplish">Graduated from University of Washington with a <u>Bachelor in Psychology</u> at age 20.</li>
+    <li class="accomplish">Graduated from Washingtons Law Enforcement <u>Police Academy</u> at age 21.</li>
   </ul>
   <p id="lastPara">This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
 
