Added question 6 and 7

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
   <h1>The man behind the curtain</h1>
-  <h2>Hello, I'm glad you got to know a little more about me.</h2>
+  <h3>Hello, I'm glad you got to know a little more about me.</h3>
   <p id="firstPara">My name is Gavin Eugene Thomas. I am in fact a male and 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the
     country. </p>
   <img src="headshot.jpg" alt="Me">
@@ -20,6 +20,13 @@
     <li class="accomplish">Graduated from University of Washington with a <u>Bachelor in Psychology</u> at age 20.</li>
     <li class="accomplish">Graduated from Washingtons Law Enforcement <u>Police Academy</u> at age 21.</li>
   </ul>
+  <h2>Past work experience</h2>
+  <ol>
+    <li>Product Specialist at Toyota Marketing</li>
+    <li>Tacoma Police Explorer Traffic Control</li>
+    <li>Smith Brothers Farms Delivery driver</li>
+    <li>Deputy Sheriff at Pierce County Sheriff's Department</li>
+  </ol>
   <p id="lastPara">This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
 
   <footer>
