--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
-  <h1>The man behind the curtain</h1>
-  <h3>Hello, I'm glad you got to know a little more about me.</h3>
-  <p id="firstPara">My name is Gavin Eugene Thomas. I am in fact a male and 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the
+  <h1>The Man Behind The Curtain</h1>
+  <!-- <h3>Hello, I'm glad you got to know a little more about me.</h3> -->
+  <p id="firstPara">Hello! I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the
     country. </p>
   <img src="headshot.jpg" alt="Me">
   <p id="accomplsh">Accomplishments to date.</p>
@@ -21,7 +21,7 @@
     <li class="accomplish">Graduated from Washingtons Law Enforcement <u>Police Academy</u> at age 21.</li>
   </ul>
   <h2>Past work experience</h2>
-  <ol>
+  <ol id="order">
     <li>Product Specialist at Toyota Marketing</li>
     <li>Tacoma Police Explorer Traffic Control</li>
     <li>Smith Brothers Farms Delivery driver</li>
@@ -37,6 +37,7 @@
     </ul>
   </footer>
   <script src="app.js"></script>
+
 </body>
 
 </html>
