--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 
 <body>
+
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
   <h1>The Man Behind The Curtain</h1>
   <!-- <h3>Hello, I'm glad you got to know a little more about me.</h3> -->
-  <p id="firstPara">Hello! I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we hope to move out into the
-    country. </p>
-  <img src="headshot.jpg" alt="Me">
+  <p id="firstPara">Hello! I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we will move out into the countryside and own
+    lots of animals. </p>
+  <img src="img/headshot.jpg" alt="Me">
   <p id="accomplsh">Accomplishments to date.</p>
   <ul class="accomplish">
     <li class="accomplish">Graduated high school with an <u>Associates of the Arts</u> from Pierce College.</li>
@@ -37,6 +38,7 @@
     </ul>
   </footer>
   <script src="app.js"></script>
+
 
 </body>
 
