--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
   <h1>The Man Behind The Curtain</h1>
-  <!-- <h3>Hello, I'm glad you got to know a little more about me.</h3> -->
   <p id="firstPara">Hello! I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we will move out into the countryside and own
     lots of animals. </p>
   <img src="img/headshot.jpg" alt="Me">
+  <section id='Accomplishments'>
   <p id="accomplsh">Accomplishments to date.</p>
   <ul class="accomplish">
     <li class="accomplish">Graduated high school with an <u>Associates of the Arts</u> from Pierce College.</li>
     <li class="accomplish">Graduated from University of Washington with a <u>Bachelor in Psychology</u> at age 20.</li>
     <li class="accomplish">Graduated from Washingtons Law Enforcement <u>Police Academy</u> at age 21.</li>
   </ul>
+</section>
+  <section id="workExperience">
   <h2>Past work experience</h2>
   <ol id="order">
     <li>Product Specialist at Toyota Marketing</li>
@@ -28,13 +30,14 @@
     <li>Smith Brothers Farms Delivery driver</li>
     <li>Deputy Sheriff at Pierce County Sheriff's Department</li>
   </ol>
+</section>
   <p id="lastPara">This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
 
   <footer>
     <ul>
-      <li><a href="www.google.com">Contact me</a></li>
-      <li><a href="www.google.com">View my work</a></li>
-      <li><a href="www.google.com">Request a Job</a></li>
+      <li><a href="index.html">Contact me</a></li>
+      <li><a href="index.html">View my work</a></li>
+      <li><a href="index.html">Request a Job</a></li>
     </ul>
   </footer>
   <script src="app.js"></script>
