--- a/index.html
+++ b/index.html
@@ -8,7 +8,26 @@
 </head>
 
 <body>
-
+  <a href="www.google.com">l<img id="bear" src="img/icon1.png"></a>
+  <img id="bear1" src="img/icon2.png">
+  <img id="bear2" src="img/icon27.png">
+  <img id="bear3" src="img/icon21.png">
+  <img id="bear4" src="img/icon5.png">
+  <img id="bear5" src="img/icon25.png">
+  <img id="bear6" src="img/icon12.png">
+  <img id="bearRight" src="img/icon8.png">
+  <img id="bearRight1" src="img/icon9.png">
+  <img id="bearRight2" src="img/icon10.png">
+  <img id="bearRight3" src="img/icon11.png">
+  <img id="bearRight4" src="img/icon24.png">
+  <img id="bearRight5" src="img/icon13.png">
+  <img id="bearRight6" src="img/icon14.png">
+  <img id="bearMiddle" src="img/icon15.png">
+  <img id="bearMiddle1" src="img/icon20.png">
+  <img id="bearMiddle2" src="img/icon17.png">
+  <img id="bearMiddle3" src="img/icon18.png">
+  <img id="bearMiddle4" src="img/icon19.png">
+  <div id='bodyContainer'>
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
   <h1>The Man Behind The Curtain</h1>
   <p id="firstPara">Hello! I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we will move out into the countryside and own
@@ -41,6 +60,7 @@
     </ul>
   </footer>
   <script src="app.js"></script>
+</div>
 </body>
 
 </html>
