--- a/index.html
+++ b/index.html
@@ -8,40 +8,49 @@
 </head>
 
 <body>
-  <a href="www.google.com">l<img id="bear" src="img/icon1.png"></a>
-  <img id="bear1" src="img/icon2.png">
-  <img id="bear2" src="img/icon27.png">
-  <img id="bear3" src="img/icon21.png">
-  <img id="bear4" src="img/icon5.png">
-  <img id="bear5" src="img/icon25.png">
-  <img id="bear6" src="img/icon12.png">
-  <img id="bearRight" src="img/icon8.png">
-  <img id="bearRight1" src="img/icon9.png">
-  <img id="bearRight2" src="img/icon10.png">
-  <img id="bearRight3" src="img/icon11.png">
-  <img id="bearRight4" src="img/icon24.png">
-  <img id="bearRight5" src="img/icon13.png">
-  <img id="bearRight6" src="img/icon14.png">
-  <img id="bearMiddle" src="img/icon15.png">
-  <img id="bearMiddle1" src="img/icon20.png">
+  <a href="indexforjs.html"><img id="bear" src="img/icon28.png"></a>
+  <a href="indexforjs.html"><img id="bear1" src="img/icon2.png"></a>
+  <a href="indexforjs.html"><img id="bear2" src="img/icon27.png"></a>
+  <a href="indexforjs.html"><img id="bear3" src="img/icon26.png"></a>
+  <a href="indexforjs.html"><img id="bear4" src="img/icon17.png"></a>
+  <a href="indexforjs.html"><img id="bear5" src="img/icon6.png"></a>
+  <a href="indexforjs.html"><img id="bear6" src="img/icon30.png"></a>
+  <a href="indexforjs.html"><img id="bearRight" src="img/icon4.png"></a>
+  <a href="indexforjs.html"><img id="bearRight1" src="img/icon5.png"></a>
+  <a href="indexforjs.html"><img id="bearRight2" src="img/icon14.png"></a>
+  <a href="indexforjs.html"><img id="bearRight3" src="img/icon11.png"></a>
+  <a href="indexforjs.html"><img id="bearRight4" src="img/icon24.png"></a>
+  <a href="indexforjs.html"><img id="bearRight5" src="img/icon23.png"></a>
+  <a href="indexforjs.html"><img id="bearRight6" src="img/icon14.png"></a>
+  <!-- <img id="bearMiddle" src="img/icon15.png"> -->
+  <!-- <img id="bearMiddle1" src="img/icon20.png">
   <img id="bearMiddle2" src="img/icon17.png">
   <img id="bearMiddle3" src="img/icon18.png">
-  <img id="bearMiddle4" src="img/icon19.png">
+  <img id="bearMiddle4" src="img/icon19.png"> -->
   <div id='bodyContainer'>
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
-  <h1>The Man Behind The Curtain</h1>
-  <p id="firstPara">Hello! I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we will move out into the countryside and own
+  <h1>Who am I?</h1>
+  <p id="firstPara">I am Gavin Eugene Thomas and am 24 years old. I have one amazing young boy named Alaric Eugene Thomas who is two years old. I live in Tacoma, Washington with Alaric and his mother Nichole, one day we will move out into the countryside and own
     lots of animals. </p>
   <img src="img/headshot.jpg" alt="Me">
-  <section id='Accomplishments'>
-  <p id="accomplsh">Accomplishments to date.</p>
+
+  <p id="accomplsh">Accomplishments to date</p>
   <ul class="accomplish">
     <li class="accomplish">Graduated high school with an <u>Associates of the Arts</u> from Pierce College.</li>
     <li class="accomplish">Graduated from University of Washington with a <u>Bachelor in Psychology</u> at age 20.</li>
     <li class="accomplish">Graduated from Washingtons Law Enforcement <u>Police Academy</u> at age 21.</li>
+    <li class="accomplish">Graduated from Code Fellows 201, 301, and <u>401 JavaScript bootcamp</u> in Seattle, Wa. With experience in.</li>
+      <ol>
+        <li>Javascript</li>
+        <li>IOS</li>
+        <li>Java</li>
+        <li>C#</li>
+        <li>Python</li>
+        <li>Ruby on Rails</li>
+      </ol>
   </ul>
-</section>
-  <section id="workExperience">
+
+
   <h2>Past work experience</h2>
   <ol id="order">
     <li>Product Specialist at Toyota Marketing</li>
@@ -49,8 +58,8 @@
     <li>Smith Brothers Farms Delivery driver</li>
     <li>Deputy Sheriff at Pierce County Sheriff's Department</li>
   </ol>
-</section>
-  <p id="lastPara">This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
+
+  <p id="lastPara">If you would like to get to know more about me, click on any icons that you see on the side of your screen! This is just a short list of accomplishments that I have achieved. As great as any persons resume can be, it does not really describe them. I believe in finding things that inspire and motivate, to create rich and fullfilling work.</p>
 
   <footer>
     <ul>
@@ -59,7 +68,7 @@
       <li><a href="index.html">Request a Job</a></li>
     </ul>
   </footer>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
 </div>
 </body>
 
