--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a href="indexforjs.html"><img id="bearRight6" src="img/icon14.png"></a>
   <!-- <img id="bearMiddle" src="img/icon15.png"> -->
   <!-- <img id="bearMiddle1" src="img/icon20.png">
-  <img id="bearMiddle2" src="img/icon17.png">
+  <img id="bearMiddle2" src="img/icon17.png">sdf
   <img id="bearMiddle3" src="img/icon18.png">
   <img id="bearMiddle4" src="img/icon19.png"> -->
   <div id='bodyContainer'>
