--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- <img id="bearMiddle1" src="img/icon20.png">
   <img id="bearMiddle2" src="img/icon17.png">sdf
   <img id="bearMiddle3" src="img/icon18.png">
-  <img id="bearMiddle4" src="img/icon19.png"> -->
+  <img id="bearMiddle4" src="img/icon19.png"> .-->
   <div id='bodyContainer'>
   <header>The world breaks everyone, and afterward, some are strong at the broken places. </br> ~Earnest Hemingway</header>
   <h1>Who am I?</h1>
